--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -17,7 +17,7 @@ $colorMain: #BB0025;
     }   
 }
 .CardItem{
-    max-width: 345; 
+    max-width: 345px; 
     min-height: 300px;
     display: flex; 
     flex-direction: column; 
