--- a/src/components/cart/cart.style.scss
+++ b/src/components/cart/cart.style.scss
@@ -1,6 +1,6 @@
 $Ubuntu: 'Ubuntu';
 $Futuris: 'Futuris Bold';
-$mainColor: #BB0025;
+$mainColor: #CC0033;
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size !important;
     font-family: $family !important;
