--- a/src/components/cart/cart.style.scss
+++ b/src/components/cart/cart.style.scss
@@ -244,7 +244,7 @@ div.boxItem .promoIcon{
         flex-direction: row;
         padding: 10px;
         & img{
-            max-width: 150px;
+            max-width: calc(100vw / 3);
             height: auto;
         }
         & > div{
