--- a/src/components/cart/cart.style.scss
+++ b/src/components/cart/cart.style.scss
@@ -78,7 +78,7 @@ div.boxItem .promoIcon{
     margin: 14px 14px;
 }
 .orderCheckText{
-    @include fons(1.2rem, $Ubuntu);
+    @include fons(1rem, $Ubuntu);
     padding-bottom: 10px;
     &.bold{
         font-weight: bold;
@@ -193,23 +193,14 @@ div.boxItem .promoIcon{
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        & > svg{
-            padding-top: 8px;
-            padding-left: 2px;
-            font-size: 0.9rem;
-        }
     }
 }
 .nameSdacha.orderCheckText{
     display: flex;
     flex-direction: row;
     padding: 0;
+    padding-bottom: 5px;
     margin: 0;
-    & > svg{
-        padding-top: 8px;
-        padding-left: 2px;
-        font-size: 0.9rem;
-    }
 }
 .tableMobile{
     width: 100%;
@@ -235,7 +226,7 @@ div.boxItem .promoIcon{
     }
     &.OrderCheckDopDialog .boxItem:not(.rowAboutDop){
         & img{
-            max-width: calc(100% / 5)!important;
+            max-width: calc(100% / 2)!important;
             height: auto;
         }
     }
@@ -270,17 +261,12 @@ div.boxItem .promoIcon{
                     color: #e5e5e5;
                 }
                 & .BtnCardMain .CardCountItem{
-                    @include fons(1.4rem, $Ubuntu);
+                    @include fons(1.2rem, $Ubuntu);
                 }
                 & .namePrice{
                     display: flex; 
                     flex-direction: row;
-                    @include fons(1.4rem, $Ubuntu);
-                    & > svg{
-                        font-size: 1rem;
-                        padding-top: 9px;
-                        padding-left: 1px;
-                    }
+                    @include fons(1.2rem, $Ubuntu);
                 }
                 & .namePriceOld{
                     @include fons(0.85rem, $Ubuntu);
@@ -358,11 +344,6 @@ div.boxItem .promoIcon{
                     display: flex; 
                     flex-direction: row;
                     @include fons(1.2rem, $Ubuntu);
-                    & > svg{
-                        font-size: 1rem;
-                        padding-top: 7px;
-                        padding-left: 1px;
-                    }
                 }
                 & .namePriceOld{
                     @include fons(0.85rem, $Ubuntu);
@@ -544,13 +525,8 @@ div.boxItem .promoIcon{
                 display: flex;
                 flex-direction: row;
                 justify-content: flex-end;
-                padding-top: 6px;
+                padding-top: 10px;
                 padding-right: 12px;
-                & svg{
-                    padding-top: 6px;
-                    font-size: 1rem;
-                    padding-left: 2px;
-                }
             }
             & .namePriceOld{
                 @include fons(0.85rem, $Ubuntu);
