--- a/src/components/cart/cart.style.scss
+++ b/src/components/cart/cart.style.scss
@@ -211,6 +211,7 @@ div.boxItem .promoIcon{
             width: 100%;
             font-family: "Ubuntu" !important;
             text-transform: none;
+            white-space: nowrap;
         }
     }
 }
