--- a/src/components/cart/cart.style.scss
+++ b/src/components/cart/cart.style.scss
@@ -63,7 +63,7 @@ div.boxItem .promoIcon{
             width: calc(33% - 9px);
         }
     }
-    & > div:last-child{
+    & > div:not(:last-child):not(:first-child){
         display: flex;
         flex-direction: row;
         & > div:first-child{
@@ -75,6 +75,37 @@ div.boxItem .promoIcon{
         & > div:not(:last-child):not(:first-child){
             margin-left: 9px;
             margin-right: 9px;
+        }
+    }
+    & .chooseDomTrue{
+        width: 100%;
+        padding-top: 20px;
+        & button:first-child{
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+        }
+        & button:last-child{
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+        & button.active{
+            background-color: $mainColor;
+            color: #fff;
+        }
+        & button:not(.active){
+            background-color: #fff;
+            border: 1px solid $mainColor;
+            color: $mainColor;
+        }
+        & button{
+            width: 50%;
+        }
+        & span{
+            font-size: 0.8rem!important;;
+            width: 100%;
+            font-family: "Ubuntu" !important;
+            text-transform: none;
+            white-space: nowrap;
         }
     }
 }
@@ -272,6 +303,7 @@ div.boxItem .promoIcon{
     &.OrderCheckDopDialog .boxItem:not(.rowAboutDop){
         & img{
             max-width: 100%!important;
+            max-height: 80px;
             height: auto;
         }
     }
