--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -31,7 +31,7 @@ $colorMain: #CC0033;
         text-align: center;
     }
     & h3{
-        @include fons(1.2rem, $Ubuntu);
+        @include fons(1.8rem, $Ubuntu);
         text-transform: uppercase;
     }
 }
@@ -69,17 +69,17 @@ $colorMain: #CC0033;
     padding-top: 70px!important;
     margin-bottom: 20px!important;
     & .swiper-slide-prev{
-        margin-right: 50px!important;
-        width: calc(100vw - 250px )!important;
-        margin-left: calc(-51vw)!important;
+        margin-right: 5vw!important;
+        width: calc(80vw - 0px) !important;
+        margin-left: -48.5vw !important;
     }
     & .swiper-slide-active{
-        width: calc(100vw - 250px )!important;
-        margin-right: 50px!important;
+        width: calc(80vw - 0px )!important;
+        margin-right: 5vw!important;
     }
     & .swiper-slide-next{
-        margin-right: 50px!important;
-        width: calc(100vw - 250px )!important;
+        margin-right: 5vw!important;
+        width: calc(80vw - 0px )!important;
     }
 }
 
@@ -107,7 +107,7 @@ $colorMain: #CC0033;
     margin-right: 20px;
     border-radius: 50%;
     opacity: 0.5;
-    background-color: $colorMain;
+    background-color: #fff;
 }
 .swiper-pagination-bullet-active{
     font-size: 0;
@@ -117,7 +117,7 @@ $colorMain: #CC0033;
     border-radius: 50%;
     margin-right: 20px;
     opacity: 1;
-    background-color: $colorMain;
+    background-color: #fff;
 }
 
 .swiper-pagination-bullets{
