--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -12,6 +12,24 @@ $colorMain: #CC0033;
     font-size: $size;
     font-family: $family !important;
 }
+
+::-webkit-scrollbar-track{
+	-webkit-box-shadow: inset 0 0 6px #d0d0d0;
+	border-radius: 10px;
+	background-color: #fff;
+}
+
+::-webkit-scrollbar{
+	width: 7px;
+	background-color: #fff;
+}
+
+::-webkit-scrollbar-thumb{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px #d0d0d0;
+	background-color: #d0d0d0;
+}
+
 body{
     margin: 0px!important;
 }
@@ -81,8 +99,11 @@ body{
             @include fons(1.3rem, $Ubuntu);
             display: flex;
             align-items: center;
+            padding-bottom: 2px;
             & svg{
                 padding-right: 6px;
+                font-size: 1.1rem;
+                padding-bottom: 2px;
             }
         }
         & .CityProfileNav{
