--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -80,9 +80,9 @@ $Futuris: 'Futuris Bold';
     height: 40%;
     width: calc(100% - 104px);
     @media (max-width: 960px) {
-        padding-bottom: 40px;
-        padding-left: 12px;
-        padding-right: 12px;
+        margin-bottom: 40px;
+        margin-left: 12px;
+        margin-right: 12px;
     }
 }
 .my-hint{
