--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -139,9 +139,7 @@ body{
         cursor: pointer;
         color: #000;
         text-decoration: none;
-        @media (min-width: 1280px) {
-            font-size: 1.05vw!important;
-        }
+        
     }
     & .catLink{
         text-decoration: none;
@@ -228,6 +226,7 @@ body{
     color: #fff;
     & span, a{
         color: #fff!important;
+        padding-bottom: 1px;
     }
 }
 #simple-popover{
