--- a/src/components/cart/cart.style.scss
+++ b/src/components/cart/cart.style.scss
@@ -276,7 +276,7 @@ div.boxItem .promoIcon{
     display: flex;
     flex-direction: row;
     padding: 0;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
     margin: 0;
 }
 .tableMobile{
@@ -404,7 +404,7 @@ div.boxItem .promoIcon{
             height: 75px;
             background-color: #fff;
             position: fixed;
-            bottom: 45px;
+            bottom: 57px;
             left: 0;
             z-index: 1;
             display: flex;
@@ -678,4 +678,12 @@ div.boxItem .promoIcon{
     cursor: pointer;
     padding: 10px;
     text-align: center;
+}
+.DialogOrderCheckDopDialog{
+    & .MuiDialog-paperFullWidth{
+        width: calc(100% - 32px);
+    }
+    & .MuiDialog-paper{
+        margin: 16px;
+    }
 }
