--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -117,7 +117,7 @@ body{
         & > div{
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: end;
         }
         & img{
             height: 33px;
