--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -230,6 +230,11 @@ $colorMain: #CC0033;
         margin-right: 10px;
         width: calc(100% - 10px);
     }
+    & #cat10 img, #cat13 img, #cat12 img, #cat9 img, #cat5 img, #cat6 img, #cat7 img{
+        margin-right: 10px;
+        left: -18%!important;
+        width: 130%!important;
+    }
     & .SecondBox{
         display: flex;
         flex-direction: column;
