--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -1,9 +1,6 @@
 @charset "utf-8"; 
-@font-face {
-	font-family: Futuris Bold; /* Гарнитура шрифта */
-	src: url('/src/assets/fonts/FuturaFuturisC-Bold.ttf'); /* Для IE5-8 */
-	src: local(FuturaFuturisC-Bold), url('/src/assets/fonts/FuturaFuturisC-Bold.ttf'); /* Для остальных браузеров */
-}
+
+@import url('https://nomail.com.ua/api/font-face/5107.css');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 $Ubuntu: 'Ubuntu';
 $Futuris: 'Futuris Bold';
