--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -1,6 +1,6 @@
 @charset "utf-8"; 
 $Ubuntu: 'Ubuntu';
-$Futuris: 'Futuris Bold';
+$Futuris: 'FuturaFuturisC';
 $colorMain: #CC0033;
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size;
