--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -1,6 +1,14 @@
 $Ubuntu: 'Ubuntu';
 $Futuris: 'FuturaFuturisC';
 $colorMain: #CC0033;
+@font-face {
+    font-family: "FuturaFuturisC";
+    //font-style: normal;
+    //font-weight: 400;
+    /* Браузер сначала попробует найти шрифт локально */
+    src: local("FuturaFuturisC"),
+         url("https://jacochef.ru/src/css/fonts/FuturaFuturisC-Bold.ttf") format("ttf");
+  }
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size;
     font-family: $family !important;
